--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A simple socket app",
   "main": "src/app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "author": "Guilherme Beidaki Peres",
   "license": "MIT",
